--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -85,9 +85,8 @@ label {
 
 .recipe-modal {
   width: 100%!important;
-  min-height: 100vh !important;
+  min-height: 100vh!important;
   top:0!important;
-  overflow: hidden;
 }
 
 // preserve froala bold setting 
@@ -97,12 +96,6 @@ strong {
 
 .modal-close-buttons {
   padding: 10px;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgb(250, 250, 250);
-  z-index: 1;
 }
 
 .quill {
